[tool.poetry]
name = "flask-chat-app"
version = "0.1.0"
description = ""
authors = ["Leonnardo Rabello <leonnardo@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_chat_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-SocketIO = "^5.3.1"
python-socketio = {extras = ["client"], version = "^5.7.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
