[tool.poetry]
name = "flask-chat-app"
version = "0.1.0"
description = ""
authors = ["Leonnardo Rabello <leonnardo@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_chat_app"}]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
